objects/Apttus_Config2__LineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Root_Id__c</fullName>
        <description>Holds the unique identifier root id to know the error in price call</description>
        <label>Root Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deal_Number__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Deal_Number__c</formula>
        <label>SAP Deal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deal_Primary_Material__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Deal_Primary_Material__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SAP Deal Primary Material</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Deal_Type__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_Deal_Type__c</formula>
        <label>SAP Deal Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_MLA_Agreement_Number__c</fullName>
        <formula>Apttus_Config2__AssetLineItemId__r.APTS_SAP_MLA_Agreement_Number__c</formula>
        <label>SAP MLA Agreement Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SSD_ship_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will look up to Source System Detail, created as part of OC-GLI implementation</description>
        <label>Ship To Acct SSD</label>
        <referenceTo>Source_System_Detail__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Service_Number__c</fullName>
        <formula>Apttus_Config2__ProductId__r.Service_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Short_Term_Bridge_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Short Term - Bridge Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Small_Law_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Small Law Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Special_Offer_Lapsed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Offer Lapsed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Start_Date__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Subscription_Number__c</fullName>
        <formula>/*IF(ISPICKVAL (Apttus_Config2__LineType__c, &apos;Option&apos;)  &amp;&amp;  OR(Apttus_Config2__ProductId__r.Name =&apos;CORPORATE SELECT ON WESTLAW&apos;, Apttus_Config2__ProductId__r.Name =&apos;GENERAL COUNSEL ESSENTIALS ON WESTLAW&apos;),Apttus_Config2__OptionId__r.Subscription_Number__c ,Apttus_Config2__ProductId__r.Subscription_Number__c)*/

IF(ISPICKVAL (Apttus_Config2__LineType__c, &apos;Option&apos;) &amp;&amp; OR(Apttus_Config2__ProductId__r.APTS_Ext_ID__c = &apos;CPROWestlaw&apos;, Apttus_Config2__ProductId__r.APTS_Ext_ID__c = &apos;CPROWestlawEssentials&apos;, Apttus_Config2__ProductId__r.APTS_Ext_ID__c = &apos;CPROWestlawIndigo&apos;),Apttus_Config2__OptionId__r.Subscription_Number__c ,Apttus_Config2__ProductId__r.Subscription_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subscription Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DOC 3232</description>
        <label>APTS_Tax_Approval_Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Tax_Prof_Renewal_Type__c</fullName>
        <label>Renewal_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Term_Type__c</fullName>
        <description>This field is created for JIRA-DOC-1938.</description>
        <label>Term Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Co-Term</fullName>
                </value>
                <value>
                    <fullName>ProRate</fullName>
                </value>
                <value>
                    <fullName>Co-Term and ProRate</fullName>
                </value>
                <value>
                    <fullName>Delivery Date</fullName>
                </value>
                <value>
                    <fullName>Future Start Date and Co-Term</fullName>
                </value>
                <value>
                    <fullName>Future Start Date</fullName>
                </value>
                <value>
                    <fullName>Delivery Date and Co-Term</fullName>
                    <isActive>false</isActive>
                    <label>Delivery Date and Co-Term</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Todays_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>APTS_Todays Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Total_Contract_Length__c</fullName>
        <formula>CASE(
TEXT( APTS_Bridge__c ), 
&quot;1 Month&quot;, 1, 
&quot;2 Months&quot;, 2,
&quot;3 Months&quot;, 3, 
&quot;4 Months&quot;, 4, 
&quot;5 Months&quot;, 5, 
&quot;6 Months&quot;, 6, 
&quot;7 Months&quot;, 7, 
&quot;8 Months&quot;, 8, 
&quot;9 Months&quot;, 9, 
&quot;10 Months&quot;, 10, 
&quot;11 Months&quot;, 11,  
0)
+
 APTS_Contract_Term_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Contract Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Totaling_Summary_Group__c</fullName>
        <formula>IF(NOT(ISBLANK(TEXT(APTS_Group__c))),
 APTS_Group_Primary_Material_Name__c  &amp; &quot; &quot; &amp;  TEXT(APTS_Group__c),&quot;Products&quot;
)</formula>
        <label>Totaling Summary Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_User_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>per the IWA Admin Guide (May 2016), created this field per the &quot;Upgrade Instructions&quot;</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_WLEC_Product_Category__c</fullName>
        <formula>TEXT( Apttus_Config2__ProductId__r.WLEC_Product_Category__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WPD Product Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_WaivedProduct_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WaivedProduct Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_WestPack_Discount__c</fullName>
        <formula>0.50</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WestPack Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_YOY_Least_Increase__c</fullName>
        <description>Calculated numeric value representing the LEAST of the applicable YoY entries.  Empty/null if not-applicable.</description>
        <formula>IF (
TEXT(APTS_Contract_Term__c) = &quot;1 Year&quot;,
null,

IF (
TEXT(APTS_Contract_Term__c) = &quot;2 Years&quot;,
VALUE(BLANKVALUE(TEXT(APTS_Years_2_Plus_Adjustment__c), &apos;0&apos;)),

IF (
TEXT(APTS_Contract_Term__c) = &quot;3 Years&quot;,
VALUE(BLANKVALUE(TEXT(APTS_Years_2_Plus_Adjustment__c), &apos;0&apos;)),

IF (
TEXT(APTS_Contract_Term__c) = &quot;4 Years&quot;,
VALUE(BLANKVALUE(TEXT(APTS_Years_2_Plus_Adjustment__c), &apos;0&apos;)),

IF (
TEXT(APTS_Contract_Term__c) = &quot;5 Years&quot;,
VALUE(BLANKVALUE(TEXT(APTS_Years_2_Plus_Adjustment__c), &apos;0&apos;)),

null
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated numeric value representing the LEAST of the applicable YoY entries.  Empty/null if not-applicable.</inlineHelpText>
        <label>YOY % - Least Increase</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Year_2_3_Price__c</fullName>
        <description>FindLaw - Year 2-3 Price</description>
        <label>Year 2-3 Price</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Year_2_Adj_Default__c</fullName>
        <formula>0</formula>
        <label>Year 2 Adjustment Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Year_2_Adjustment__c</fullName>
        <label>YOY % Yr 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Yearly_Total__c</fullName>
        <formula>IF(TEXT(Apttus_Config2__SellingFrequency__c)==
&apos;Monthly&apos; &amp;&amp;  APTS_Product_Delivery__c == null,IF(APTS_Contract_Term_Number__c &gt; 12,12*Apttus_Config2__NetPrice__c,APTS_Contract_Term_Number__c*Apttus_Config2__NetPrice__c),
Apttus_Config2__NetPrice__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yearly Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Years_2_3_Charges_Disc_Surc__c</fullName>
        <formula>IF( APTS_Contract_Term_Number__c &gt; 12, APTS_Year_2_3_Price__c /  Apttus_Config2__NetPrice__c - 1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Years 2-3 Disc/Surc</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>APTS_Years_2_Plus_Adjustment__c</fullName>
        <label>YoY 2+ %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Years_2_Plus_Default__c</fullName>
        <formula>IF(OR(APTS_Cat_L2__c== $Label.APTS_HighQ_Product_Family,
AND(OR(APTS_Proposal_Business_Unit__c == &apos;SCS&apos; || APTS_Proposal_Business_Unit__c == &apos;Canada&apos;),
OR(TEXT(Apttus_Config2__ProductId__r.Family) == &apos;ACRITAS&apos; || (TEXT(Apttus_Config2__ProductId__r.Family) == &apos;CASELINE&apos; &amp;&amp; APTS_Media_High_Level_Code__c ==&apos;13&apos;)))), 3,
IF(APTS_Proposal_Business_Unit__c  == &apos;Corp OneOTC US&apos; || APTS_Proposal_Business_Unit__c  == &apos;Corp OneOTC UK&apos;,4,
IF(APTS_Proposal_Business_Unit__c == &apos;Tax Professional&apos;,5,
IF((APTS_Proposal_Business_Unit__c == $Label.SALESORGCAN &amp;&amp; (APTS_Product_Pricing_Model__c== $Label.BGBPRICINGMODEL || APTS_Product_Pricing_Model__c== $Label.BANDED || APTS_Product_Pricing_Model__c== $Label.PERSEAT  || APTS_Product_Code__c ==&apos;41972767&apos; )),2,
IF(APTS_Proposal_Business_Unit__c == &apos;SCS&apos; &amp;&amp; contains($Label.APTS_SCS_Proflex,APTS_Product_Code__c),5,
IF((APTS_Media_High_Level_Code__c !=&apos;13&apos; &amp;&amp; APTS_Media_Lower_Level_Code__c != NULL) || (APTS_Media_High_Level_Code__c !=&apos;13&apos; &amp;&amp; APTS_Media_Lower_Level_Code__c != &quot;SS&quot;) || (APTS_Media_High_Level_Code__c !=&apos;26&apos; &amp;&amp; APTS_Media_Lower_Level_Code__c != NULL), 
IF((APTS_Media_High_Level_Code__c ==&apos;13&apos; &amp;&amp; (APTS_Media_Lower_Level_Code__c == &apos;PS&apos; || APTS_Media_Lower_Level_Code__c == &apos;ST&apos; || APTS_Media_Lower_Level_Code__c == &apos;Q6&apos;)) || 
(APTS_Media_High_Level_Code__c ==&apos;06&apos; &amp;&amp; (APTS_Media_Lower_Level_Code__c == &apos;51&apos; || APTS_Media_Lower_Level_Code__c == &apos;AR&apos;)),0,
IF(((APTS_Proposal_Business_Unit__c  == &apos;SCS&apos; || APTS_Proposal_Business_Unit__c  == $Label.SALESORGCAN)&amp;&amp; 
((APTS_Media_High_Level_Code__c ==&apos;13&apos;) &amp;&amp; (APTS_Media_Lower_Level_Code__c == &apos;NT&apos; || APTS_Media_Lower_Level_Code__c == &apos;NW&apos; || APTS_Media_Lower_Level_Code__c == &apos;NX&apos;))&amp;&amp; APTS_Item_Category_Group__c == &apos;ZWG3&apos;),4,5)),
5))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YoY 2+ Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Years_3_5_Adj_Default__c</fullName>
        <formula>0</formula>
        <label>Years 3-5 Adjustment Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Years_3_5_Adjustment__c</fullName>
        <label>YOY % Yr 3-5</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Years_6_10_Adj_Default__c</fullName>
        <formula>0</formula>
        <label>Years 6-10 Adjustment Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Years_6_10_Adjustment__c</fullName>
        <label>YOY % Yr 6-10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_YoY_Adjustment_Type__c</fullName>
        <formula>Apttus_Config2__ConfigurationId__r.APTS_Default_YoY_Adjustment_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YOY +/-</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Yr_1_Renewal_Adjustment__c</fullName>
        <label>YoY 1 Renewal %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Yr_1_Renewal_Default__c</fullName>
        <formula>IF(OR(APTS_Cat_L2__c== $Label.APTS_HighQ_Product_Family,AND(OR(APTS_Proposal_Business_Unit__c == &apos;SCS&apos; || APTS_Proposal_Business_Unit__c == &apos;Canada&apos;),OR(TEXT(Apttus_Config2__ProductId__r.Family) == &apos;ACRITAS&apos;,TEXT(Apttus_Config2__ProductId__r.Family) == &apos;CASELINE&apos;,TEXT(Apttus_Config2__ProductId__r.Family) == &apos;PONDERA&apos;),ISPICKVAL( Apttus_Config2__LineStatus__c , &apos;Renewed&apos;))),3,IF(AND(OR(APTS_Proposal_Business_Unit__c = &apos;Canada&apos;,APTS_Approval_Segment__c = &apos;AEM Risk&apos;), ISPICKVAL( Apttus_Config2__LineStatus__c , &apos;Renewed&apos;)), 5, IF( AND(OR(APTS_Proposal_Business_Unit__c = &apos;Corp OneOTC US&apos;,APTS_Proposal_Business_Unit__c = &apos;Corp OneOTC UK&apos;), ISPICKVAL( Apttus_Config2__LineStatus__c , &apos;Renewed&apos;)) , 4, IF( AND(OR(APTS_Proposal_Business_Unit__c = &apos;Corp OneOTC US&apos;,APTS_Proposal_Business_Unit__c = &apos;Corp OneOTC UK&apos;), ISPICKVAL( Apttus_Config2__LineStatus__c , &apos;New&apos;)),null,CASE(APTS_Media_Lower_Level_Code__c,
&quot;51&quot;,0,
&quot;AR&quot;,0,
&quot;ST&quot;,0,
&quot;PS&quot;,IF(APTS_Media_High_Level_Code__c=&quot;13&quot;,0,7),
&quot;Q6&quot;,IF(APTS_Media_High_Level_Code__c=&quot;13&quot;,0,7),
7)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YoY 1 Renewal Default</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Yr_2_Amount__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Yr 2 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Yr_3_Amount__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Yr 3 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Yr_4_Amount__c</fullName>
        <description>Created as part of DOC-3563</description>
        <label>Yr 4 Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_is_Primary_in_Bundle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Primary in Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_CQApprov__Approval_Status__c</fullName>
        <description>The approval status of the cart line item</description>
        <inlineHelpText>The approval status of the cart line item</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Approval Triggered</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdHocGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the totaling group associated with the item</description>
        <label>Totaling Group</label>
        <referenceTo>Apttus_Config2__AdHocGroup__c</referenceTo>
        <relationshipLabel>Line Items</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddedByRuleInfo__c</fullName>
        <description>Information about the auto inclusion constraint rule action and line number that finally triggers the rule is stored here.</description>
        <label>Added By Rule Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AddedBy__c</fullName>
        <description>Indicates who added the product/service line item</description>
        <label>Added By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                    <label>User</label>
                </value>
                <value>
                    <fullName>Default Rule</fullName>
                </value>
                <value>
                    <fullName>Constraint Rule</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustedPrice__c</fullName>
        <description>The adjusted price (including option price)</description>
        <label>Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__AdjustmentAmount__c</fullName>
        <description>The manual price adjustment amount.</description>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
</CustomObject>